--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
-    "basic-component-library": "^1.0.3",
+    "basic-component-lib": "^0.0.7",
     "bootstrap": "^4.6.0",
     "ngx-mask": "^11.1.5",
     "rxjs": "~6.6.0",
@@ -44,7 +44,7 @@
     "@types/node": "^12.11.1",
     "babel-loader": "^8.2.2",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.7.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
