--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
-    "basic-component-lib": "^0.0.7",
+    "basic-component-library": "^2.0.1",
     "bootstrap": "^4.6.0",
     "ngx-mask": "^11.1.5",
     "rxjs": "~6.6.0",
